# simple_crud_rust

./: Cargo.toml
migrations/: 0002_users_table.sql  20240531110321_todo_table.sql
src/: lib.rs  main.rs  routes.rs  server.rs
src/authentication/: handlers.rs  models.rs  utils.rs  views.rs
src/common/: errors.rs  middleware.rs  pagination.rs  password_encoder.rs
src/database/: db.rs
src/todos/: handlers.rs  model.rs  repository.rs  todo_service.rs  views.rs
src/user/: handlers.rs  model.rs  repository.rs  user_service.rs  views.rs
